	client/gtk/player.c, client/gtk/plenty.c, client/gtk/quote.c,
	client/gtk/resource.c, client/gtk/settingscreen.c, client/gtk/state.c,
	client/gtk/trade.c: Preparations for 'Leave Game', added some
	constness, chat disabled when offline, frontend_gui_register_* can
	handle more than one widget, removed toolbar hack (not needed anymore)
	
2004-11-12 Roland Clobus <rclobus@bigfoot.com>
	* Actually updated the build number to 0.8.1.42
	
2004-11-05  0.8.1.42  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/resource.c: Translation was not active
	* client/callback.h, client/ai/greedy.c, client/common/client.c,
	client/common/develop.c, client/gtk/frontend.h, common/cards.c,
	common/cards.h: More const in prototypes
	* client/gtk/develop.c: Rewrite without deprecated GTK calls
	* client/common/callbacks.c: Reset development cards when a new game
	starts

2004-10-27  0.8.1.41  Roland Clobus <rclobus@bigfoot.com>
	* client/common/client.c: Added dummy callsbacks to remove compiler
	warnings
	* common/common_glib.c, common/common_glib.h, common/driver.h,
	common/network.c, server/gnocatan-server.c, server/server.c: Using the
	new typedef InputFunc
	* rules.make: When compiling with --enable-debug,
	GNOME_DISABLE_DEPRECATED can be used
	* ai/ai.c, ai/client.c, ai/computer.c, ai/player.c, ai/resource.c,
	ai/trade.c: gnome.h previously included string.h, now we must do it
	ourselves
	* client/gtk/gui.c: Rewrite of Preference dialog. It uses
	instant-apply. Toolbar settings removed, because GNOME already saves
	it
	* client/common/chat.c, common/log.c, common/log.h,
	common/gtk/common_gtk.c: Chat color separate from use of color of
	messages
	* client/gtk/identity.c: Removed compiler warnings
	
2004-10-24  0.8.1.40  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/gui.c, client/gtk/gui.h, client/gtk/trade.c: Removed the
	second global variable map. (The other is client/common/client.[ch])
	* client/gtk/guimap.c, client/gtk/guimap.h, client/gtk/histogram.c: